Add: create usr

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "@2112miguel",
   "license": "MIT",
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.10"
   }
 }
