--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
-
+#src/lib/db.js
+mongoDB.txt
 ### Node ###
 # Logs
 logs
